add example for use hiera